--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
 
   <nav class="nav">
     <a href="#">Projects</a>
-    <a href="#">About</a>
-    <a href="#">Support</a>
+    <a href="https://hesu-dev.github.io/portfolio_hesu/">About</a>
+    <a href="#">Contact</a>
   </nav>
 
-  <div class="login">
+  <!-- <div class="login">
     <button id="loginBtn">Login</button>
-  </div>
+  </div> -->
 </header>
 
 <!-- ================= LOGIN MODAL ================= -->
@@ -37,11 +37,11 @@
 <!-- ================= HERO / CAROUSEL ================= -->
 <section class="carousel">
   <div class="slides">
-    <div class="slide active" data-link="/p/mini_project/saju/">
+    <div class="slide active" data-link="/portfolio_site/mini_project/saju/">
       <img src="assets/images/slide1.jpg" />
       <div class="caption">Saju Project</div>
     </div>
-    <div class="slide" data-link="/p/game/my_game/">
+    <div class="slide" data-link="/portfolio_site/game/my_game/">
       <img src="assets/images/slide2.jpg" />
       <div class="caption">Game Project</div>
     </div>
@@ -54,20 +54,20 @@
 </section>
 
 <!-- ================= PROJECT ICON HUB ================= -->
-<section class="projects">
+<!-- <section class="projects">
   <h2>Projects</h2>
   <div class="project-grid">
-    <a href="/p/mini_project/saju/" class="project-card">
+    <a href="/portfolio_site/mini_project/saju/" class="project-card">
       <img src="assets/images/saju.png" />
       <span>Saju</span>
     </a>
 
-    <a href="/p/game/my_game/" class="project-card">
+    <a href="/portfolio_site/game/my_game/" class="project-card">
       <img src="assets/images/game.png" />
       <span>Game</span>
     </a>
   </div>
-</section>
+</section> -->
 
 <!-- ================= FOOTER ================= -->
 <footer class="footer">
