--- a/index.html
+++ b/index.html
@@ -35,21 +35,13 @@
 </div>
 
 <!-- ================= HERO / CAROUSEL ================= -->
-<section class="carousel">
-  <div class="slides">
-    <div class="slide active" data-link="/portfolio_site/mini_project/saju/">
-      <img src="assets/images/slide1.jpg" />
-      <div class="caption">Saju Project</div>
-    </div>
-    <div class="slide" data-link="/portfolio_site/game/my_game/">
-      <img src="assets/images/slide2.jpg" />
-      <div class="caption">Game Project</div>
-    </div>
-  </div>
+<section class="card-carousel project">
+    <h2>Projects</h2>
+  <div id="carouselTrack" class="carousel-track"></div>
 
-  <div class="carousel-controls">
-    <button id="prev">‹</button>
-    <button id="next">›</button>
+  <div class="carousel-bottom">
+    <button id="togglePlay">❚❚</button>
+    <div id="indicators" class="indicators"></div>
   </div>
 </section>
 
@@ -57,12 +49,12 @@
 <!-- <section class="projects">
   <h2>Projects</h2>
   <div class="project-grid">
-    <a href="/portfolio_site/mini_project/saju/" class="project-card">
+    <a href="/portfolio_site/mini_project/" class="project-card">
       <img src="assets/images/saju.png" />
-      <span>Saju</span>
+      <span>Project</span>
     </a>
 
-    <a href="/portfolio_site/game/my_game/" class="project-card">
+    <a href="/portfolio_site/game/" class="project-card">
       <img src="assets/images/game.png" />
       <span>Game</span>
     </a>
